Added enquiry and maps in index and changed some styling

--- a/accountingcourse.html
+++ b/accountingcourse.html
@@ -25,7 +25,7 @@
         <div class="cardcontainer">
             <div class="card">
                 <div class="background"><img src="./Images/accbg.jpg" /></div>
-                <img src="./images/CFA.png" alt="" srcset="">
+                <img src="./Images/CFA.png" alt="" srcset="">
                 <div class="coursename">CFA</div>
                 <span><span class="courseduration"><b>Duration:</b></span><span class="duration"> 6
                         Months</span></span>
@@ -43,7 +43,7 @@
 
             <div class="card">
                 <div class="background"><img src="./Images/accbg.jpg" /></div>
-                <img src="./images/DFA.png" alt="" srcset="">
+                <img src="./Images/DFA.png" alt="" srcset="">
                 <div class="coursename">DFA</div>
                 <span><span class="courseduration"><b>Duration:</b></span><span class="duration"> 12
                         Months</span></span>
