--- a/hardwarecourse.html
+++ b/hardwarecourse.html
@@ -26,7 +26,7 @@
         <div class="cardcontainer">
             <div class="card">
                 <div class="background"><img src="./Images/hardware.png" /></div>
-                <img src="./images/CHN.jpg" alt="" srcset="">
+                <img src="./Images/CHN.jpg" alt="" srcset="">
                 <div class="coursename">CHN</div>
                 <span><span class="courseduration"><b>Duration:</b></span><span class="duration">6
                         Months</span></span>
@@ -44,7 +44,7 @@
 
             <div class="card">
                 <div class="background"><img src="./Images/hardware.png" /></div>
-                <img src="./images/DHN.png" alt="" srcset="">
+                <img src="./Images/DHN.png" alt="" srcset="">
                 <div class="coursename">DHN</div>
                 <span><span class="courseduration"><b>Duration:</b></span><span class="duration"> 6
                         Months</span></span>
