--- a/softwarecourse.html
+++ b/softwarecourse.html
@@ -22,7 +22,7 @@
         <div class="cardcontainer">
             <div class="card">
                 <div class="background"><img src="./Images/computer.jpg" /></div>
-                <img src="./images/office.png" alt="" srcset="">
+                <img src="./Images/office.png" alt="" srcset="">
                 <div class="coursename">CCB (Basic)</div>
                 <span><span class="courseduration"><b>Duration:</b></span><span class="duration"> 3
                         Months</span></span>
@@ -40,7 +40,7 @@
 
             <div class="card">
                 <div class="background"><img src="./Images/computer.jpg" /></div>
-                <img src="./images/programming.png" alt="" srcset="">
+                <img src="./Images/programming.png" alt="" srcset="">
                 <div class="coursename">CST</div>
                 <span><span class="courseduration"><b>Duration:</b></span><span class="duration"> 6
                         Months</span></span>
@@ -58,7 +58,7 @@
 
             <div class="card">
                 <div class="background"><img src="./Images/computer.jpg" /></div>
-                <img src="./images/database.png" alt="" srcset="">
+                <img src="./Images/database.png" alt="" srcset="">
                 <div class="coursename">DCA</div>
                 <span><span class="courseduration"><b>Duration:</b></span><span class="duration"> 12
                         Months</span></span>
@@ -75,7 +75,7 @@
             </div>
             <div class="card">
                 <div class="background"><img src="./Images/computer.jpg" /></div>
-                <img src="./images/c++.png" alt="" srcset="">
+                <img src="./Images/c++.png" alt="" srcset="">
                 <div class="coursename">C++ With OOPS</div>
                 <div class="feesinfo">
                     <div class="feesheading">Fees:</div>
@@ -90,7 +90,7 @@
             </div>
             <div class="card">
                 <div class="background"><img src="./Images/computer.jpg" /></div>
-                <img src="./images/python.png" alt="" srcset="">
+                <img src="./Images/python.png" alt="" srcset="">
                 <div class="coursename">Core Python</div>
                 <div class="feesinfo">
                     <div class="feesheading">Fees:</div>
@@ -105,7 +105,7 @@
             </div>
             <div class="card">
                 <div class="background"><img src="./Images/computer.jpg" /></div>
-                <img src="./images/java.png" alt="" srcset="">
+                <img src="./Images/java.png" alt="" srcset="">
                 <div class="coursename">Java</div>
                 <div class="feesinfo">
                     <div class="feesheading">Fees:</div>
@@ -120,7 +120,7 @@
             </div>
             <div class="card">
                 <div class="background"><img src="./Images/computer.jpg" /></div>
-                <img src="./images/c.png" alt="" srcset="">
+                <img src="./Images/c.png" alt="" srcset="">
                 <div class="coursename">C</div>
                 <div class="feesinfo">
                     <div class="feesheading">Fees:</div>
