--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="shortcut icon" href="./Images/hil.png" type="image/png">
     <link rel="stylesheet" href="cards.css">
     <link rel="stylesheet" href="./slider.css">
+    <link rel="stylesheet" href="./form.css">
+    <link rel="stylesheet" href="./maps.css">    
 </head>
 
 <body>
@@ -77,7 +79,51 @@
                 </div>
             </div>
         </div>
+        <div class="gettous">
+            <h1 class="mapheading">Our Location...</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13856.295760470497!2d78.5205705!3d29.7465732!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd4592462d6c837e6!2sHiltron%20Calc%20And%20UOU!5e0!3m2!1sen!2sin!4v1643562597798!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
 
+        <div class="maincontainer">
+            <div class="formcontainer">
+                <form onsubmit="sendEmail(); reset(); return false">
+                    <div class="enqheading">Send Enquiry</div>
+            <input  id="username"  required type="text" placeholder="Enter Name">
+            <input  id="phone" required  type="number" placeholder="Phone Number here..."  maxlength="10">
+            <input id="courseenquiry" required class="coursebox" list="course" placeholder="Select or type Course...">
+            <datalist id="course">
+                <optgroup label="Software">
+                    <option >CCB (3 Month)</option>
+                    <option selected >CST (6 Month)</option>
+                    <option >DCA (1 Year)</option>
+                    <option >Python </option>
+                    <option >Java</option>
+                    <option >C++ </option>
+                    <option >C </option>
+                </optgroup>
+                <optgroup label="Hardware">
+                    <option >CHN</option>
+                    <option >DHN</option>
+                </optgroup>
+                <optgroup label="Accounting">
+                    <option >CFA</option>
+                    <option >DFA</option>
+                </optgroup>
+            </datalist>        
+    
+            <textarea required id="enquirydetails" class="enq" rows=3 placeholder="Please type your enquiry here..."></textarea> 
+            <input class="submitbtn"  type="submit" value="Send">
+            <div id="popup" class="popup popuphide">
+                Thank You! Your message has been sent...
+            </div>
+        </form>
+        
+        </div>
+    </div>
+        <script src="./form logic.js"></script>
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+        <!-- footer -->
 
         <footer class="footer">
             <div class="important">Important Links</div>
@@ -103,11 +149,15 @@
                     <div class="socialcontainer">
                         <div class="facebook">
                             <i class="fab fa-facebook"></i>
-                            facebook link
+                            <span style="cursor: pointer;" onclick="location.href='https://m.facebook.com/banwari.jakhmola/'">Facebook Link</span>
+                        </div>
+                        <div class="facebookpage">
+                            <i class="fab fa-facebook-f"></i>
+                            <span style="cursor: pointer;" onclick="location.href='https://m.facebook.com/banwari.jakhmola/'">Facebook Link</span>
                         </div>
                         <div class="youtube">
                             <i class="fab fa-youtube"></i>
-                            youtubelink
+                            <span style="cursor: pointer;" onclick="location.href='https://www.youtube.com/channel/UCkFdw-weoRKvMhGLvapJYUw/featured'"> Youtube Link </span>
                         </div>
                     </div>
                 </div>
